2008-07-22  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsterm.m (syms_of_nsterm): Remove debugging println.

2008-07-22  David Reitter  <david.reitter@gmail.com>

	* nsfns.m: (do_applescript, F_do_applescript): NS version of the
	Carbon implementation of the same functionality: execute arbitrary
	AppleScript code.

2008-07-21  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsfns.m
	(Fx_create_frame, Fx_read_file_name, Fx_get_resource)
	(Fx_set_resource, Fx_set_alpha, Fx_server_max_request_size)
	(Fx_server_vendor, Fx_server_version, Fx_display_screens)
	(Fx_display_mm_height, Fx_display_mm_width)
	(Fx_display_backing_store, Fx_display_visual_class)
	(Fx_display_save_under, Fx_open_connection)
	(Fx_close_connection, Fx_hide_emacs, Fx_font_name)
	(Fx_list_colors, Fx_perform_service, Fx_color_defined_p)
	(Fx_color_values, Fxw_display_color_p, Fx_display_grayscale_p)
	(Fx_display_pixel_width, Fx_display_pixel_height)
	(Fx_display_usable_bounds, Fx_display_planes)
	(Fx_display_color_cells, Vns_icon_type_alist): Change to use 'doc: /*
	... */' style of docstrings.

2008-07-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* m/mips.h (LOAD_AVE_TYPE, LOAD_AVE_CVT): Do not define, not used
	on this platform.
	(mips):
	* m/iris4d.h (mips): Do not define.
	* sysdep.c (init_sys_modes): Use __mips__ instead of mips.

	* m/ibmrs6000.h (LD_SWITCH_SITE): Remove.

	* image.c:
	* nsfns.m:
	* nsselect.m:
	* nsterm.h:
	* nsterm.m: Rename ns prefixed functions/variables to the
	corresponding x versions.  Update references.

	* m/ibms390x.h (NO_REMAP): Do not undefine.

	* m/amdx86-64.h: Use SOLARIS2 instead of sun.

2008-07-21  Chong Yidong  <cyd@stupidchicken.com>

	* nsfns.m: Change NS to Nextstep in docstrings and error messages.
	(Fns_create_frame, Fns_read_file_name, Fns_get_resource)
	(Fns_set_resource, Fns_set_alpha, Fns_server_max_request_size)
	(Fns_server_vendor, Fns_server_version, Fns_display_screens)
	(Fns_display_mm_height, Fns_display_mm_width)